contrast color corrections

--- a/chamber/styles/chamber-directory.css
+++ b/chamber/styles/chamber-directory.css
@@ -361,7 +361,7 @@ h2 {
 }
 
 .style-link-spotlight {
-    color: #415a77;
+    color: #4a4e69;
     text-decoration: underline;
     text-decoration-color: currentColor;
 }
